--- a/serverless.yml
+++ b/serverless.yml
@@ -9,8 +9,13 @@ provider:
 
 plugins:
   - serverless-s3-sync
+  - serverless-webpack
+
+package:
+  individually: true
 
 custom:
+  tableName: player-points
   s3Sync:
     - bucketName: myserverlessprojectuploadbucket-7342657832467
       localDir: UploadData
@@ -20,9 +25,9 @@ functions:
     handler: lambdas/getUser.handler
     events:
       - http:
-        path: get-user/{ID}
-        method: GET
-        cors: true
+          path: get-user/{ID}
+          method: GET
+          cors: true
 
 resources:
   Resources:
@@ -30,3 +35,14 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: myserverlessprojectuploadbucket-7342657832467
+    MyDynamoDbTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.tableName}
+        AttributeDefinitions:
+          - AttributeName: ID
+            AttributeType: S
+        KeySchema:
+          - AttributeName: ID
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
