--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "babel-preset-env": "^1.6.0",
     "serverless-bundle": "^1.3.3",
     "serverless-pseudo-parameters": "^2.5.0",
-    "webpack": "^4.35.2",
-    "serverless-webpack": "^5.7.0"
+    "serverless-webpack": "^5.7.0",
+    "webpack": "^4.35.2"
   },
   "dependencies": {
     "@middy/core": "^2.5.7",
@@ -36,6 +36,7 @@
     "aws-sdk": "^2.1116.0",
     "axios": "^0.26.1",
     "http-errors": "^2.0.0",
-    "serverless-mysql": "^1.5.4"
+    "serverless-mysql": "^1.5.4",
+    "uuid": "^8.3.2"
   }
 }
